--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,7 +83,7 @@ theme:
         - navigation.instant.prefetch
         - navigation.instant.progress
         - navigation.tracking
-        - navigation.tabs
+        #- navigation.tabs
         - navigation.tabs.sticky
         - navigation.sections
         - navigation.expand
