--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,11 +84,11 @@ theme:
         - navigation.instant.progress
         - navigation.tracking
         #- navigation.tabs
-        - navigation.tabs.sticky
+        #- navigation.tabs.sticky
         - navigation.sections
         - navigation.expand
         - navigation.path
-        - navigation.indexes
+        #- navigation.indexes
         - navigation.top
         - navigation.footer
         - toc.follow
@@ -174,5 +174,5 @@ extra:
   generator: false
 
 copyright: >
-  Copyright &copy; 2025 McGuire Technology –
+  Made with ❤️ by McGuire Technology · Copyright &copy; 2025 ·
   <a href="#__consent">Change cookie settings</a>
