--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,8 +91,8 @@ theme:
         #- navigation.indexes
         - navigation.top
         - navigation.footer
-        - toc.follow
-        - toc.integrate
+        #- toc.follow
+        #- toc.integrate
         - search.suggest
         - search.highlight
         - search.share
