--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -175,5 +175,4 @@ extra:
   generator: false
 
 copyright: >
-  Made with ❤️ by McGuire Technology · Copyright &copy; 2025 ·
-  <a href="#__consent">Change cookie settings</a>
+  Made with ❤️ by McGuire Technology · Copyright &copy; 2025
