Add last updated timestamps from Git history to all pages
- Installed mkdocs-git-revision-date-localized-plugin
- Configured with timeago format and creation dates enabled
- Shows when each page was last modified in Git
- Displays in footer of each page
- Updates automatically on each build from Git history

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,6 +109,9 @@ extra_css:
 
 plugins:
     - search
+    - git-revision-date-localized:
+        enable_creation_date: true
+        type: timeago
     - mkdocs_quiz
 markdown_extensions:
   - admonition
