--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ mkdocs-material = "^9.5.0"
 mkdocs-quiz = "^1.1.0"
 mkdocs-exclude = "^1.0.2"
 setuptools = ">=68.0.0"
+mkdocs-git-revision-date-localized-plugin = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 # Optional: add markdown linting or testing tools later
