--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,9 +82,9 @@ theme:
       text: Roboto
       code: Roboto Mono
     features:
-        - navigation.instant
-        - navigation.instant.prefetch
-        - navigation.instant.progress
+        #- navigation.instant
+        #- navigation.instant.prefetch
+        #- navigation.instant.progress
         - navigation.tracking
         #- navigation.tabs
         #- navigation.tabs.sticky
